# 2048Py

./: .gitignore  CLAUDE.md  README.md  RELEASE.md  abilityIdeas.txt  colors.txt  compile.bat  compile.sh  dictionary.txt  functions.py  ideas.txt  main.py  maingl.py  minimumPoints.txt  notes.txt  obstructions.txt  passiveStats.txt  snail.txt  test_slow.py  ver.txt
docs/: README.md  architecture.md  audio.md  engine.md  extending.md  frontend.md  game-systems.md  testing.md
engine/: CMakeLists.txt
engine/include/: board.h  contrarian_behavior.h  game_engine.h  movement.h  passive.h  passive_roller.h  slow_behavior.h  slow_mover.h  tile.h  tile_behavior.h
engine/src/: bindings.cpp  board.cpp  game_engine.cpp  movement.cpp  passive.cpp  passive_roller.cpp  slow_behavior.cpp  slow_mover.cpp  tile.cpp
src/: audio_manager.py  functions.py  main.py
src/engine/include/: board.h  game_engine.h  movement.h  passive.h  passive_roller.h  random_mover.h  turn_result.h
src/engine/src/: bindings.cpp  board.cpp  contrarian_behavior.cpp  game_engine.cpp  movement.cpp  passive_roller.cpp  random_mover.cpp  slow_behavior.cpp
tests/: helpers.py  test_determinism.py  test_fuzz_invariants.py  test_interactions.py  test_movement_basics.py
